--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "Sort Outlook Calendars",
-  "description": "Sort list of calendars on the Outlook web app",
-  "homepage_url": "https://github.com/jasonku/sort-outlook-calendars",
+  "name": "Outlook OWA Improvements",
+  "description": "Implements a number of usability improvements in the Outlook Calendar web app",
+  "homepage_url": "https://github.com/jasonku/outlook-owa-improvements",
   "version": "1.0",
   "icons": {
     "48": "icons/icon.png",
