--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
 
   "content_scripts": [
     {
-      "matches": ["*://outlook.office.com/*"],
+      "matches": ["*://outlook.office.com/calendar*"],
       "js": ["./improvements.js"]
     }
   ]
